<resources>
    <string name="app_name">geofence app</string>
    <string name="welcome_to">Welcome to</string>
    <string name="geolive_picker">GeoLive Picker!</string>
    <string name="choose_location">choose location</string>
    <string name="show_entered_areas">show entered areas</string>
    <string name="stop_stracking">stop stracking</string>
    <string name="title_activity_map">mapActivity</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="press_here_to_choose_locations">Press here to choose locations</string>
    <string name="created_by_alex_gajda">Created By Alex Gajda</string>
    <string name="Home" />
    <string name="pause_resume">Pause / Resume</string>
    <string name="home">Home</string>
</resources>