<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="180dp"
        android:layout_height="46dp"
        android:gravity="center"
        android:text="@string/welcome_to"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="285dp"
        android:layout_height="56dp"
        android:gravity="center"
        android:text="@string/geolive_picker"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/chooseLocation"
        android:layout_width="281dp"
        android:layout_height="48dp"
        android:layout_marginTop="328dp"
        android:text="@string/choose_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/showAreas"
        android:layout_width="281dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/show_entered_areas"
        app:layout_constraintEnd_toEndOf="@+id/chooseLocation"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/chooseLocation"
        app:layout_constraintTop_toBottomOf="@+id/chooseLocation" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="281dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/stop_stracking"
        app:layout_constraintEnd_toEndOf="@+id/showAreas"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/showAreas"
        app:layout_constraintTop_toBottomOf="@+id/showAreas" />
</androidx.constraintlayout.widget.ConstraintLayout>